--- a/Pages/1Solutions/2Services/1Consultation/3Cross-industry applications/artificialintelligenceapplications.org
+++ b/Pages/1Solutions/2Services/1Consultation/3Cross-industry applications/artificialintelligenceapplications.org
@@ -35,3 +35,13 @@ AIs will teach itself to interact with avatars by practicing on the hundreds of 
 
 Unity is a cross-platform game engine developed by Unity Technologis a  consoles mobile devicean websites First announced only for  OS X, at Apple's  Worldwide Developers Conference  in 2005, it has since been extended to target 21 platforms. Nintendo provides free licenses of Unity 5 to all licensed Nintendo Developers along with their software development kit s (SDKs) for the  Wii U and Nintendo 3DS Family
 
+
+
+
+
+Anything Siri or Alexa can do now they will do better in VR, because VR gather 
+
+
+ to Paris for the evening of the 17th from New York"  "Call me a   The machine simply needs to know to teleport to that 360 video content.   "Bring me to wherever Kelly is"  or "Tell my wife I am going to be thirty minutes late"  The system needs to be smart enough not only to understand the intent, but also to know who the wife is and the best way to contact her. No extraneous information is necessary, no option list, no follow-up questions. We call this Minimum Viable Interaction (MVI).
+
+
