--- a/Pages/1Solutions/2Services/2Production/Develope/alldevtechs1_abstract.org
+++ b/Pages/1Solutions/2Services/2Production/Develope/alldevtechs1_abstract.org
@@ -129,7 +129,7 @@ The seven primary emotions monitored in traditional commercial software is happi
 
 * Blockchain 
 
-A "block"-"chain" is a distributed database (or ledger) that maintains a continuously growing list of ordered records.
+A "block"-"chain" is a distributed database (or ledger) that maintains a continuously growing list of ordered records.  Some major blockchain features include: 
 
 - Secure, private transactions
 - Microtransactions
@@ -142,42 +142,41 @@ Features, such as "smart contracts" allow us to host concerts in VR with secure 
 
 Blockchain tech allows the users to exclusively own and control them content and platform the build.  
 
-i
+
 * Iot
 
-*** What the technology is
-*** How it is integrated in VR
-*** Why they care (it maks them money)
+The Internet of things (IoT) is the network of digitally conntected devices,such as home appliances and vehicles, that are conntected to the internet.  These devices are equipped with sensors and operating software, enabling remote access and managment.  For example, adjusting your beach house thermastat from upstate, or  recieving a text message notifying you the plants need watering (because your botany sensors noticed drought.  
+
+Simulations of physical tasks allow for us to practice, minimize risks and scale profit margins.   Imagine remotely controlling construction machinerary.  By being in the simulation, apprentices can train without the risk of hurting themselves.   Experts can control machines remotely, cutting down on transportation costs.   Through the VR simulation one can navigate the controls to operate an actual piece of machinerary just as effectively as if he were int he machine itself, but from the other side of the world.  This is the "internet of things", which will quickly evolving into the "Internet of Everything" (IoE) and then the "Internet of Humans" (IoH).
+
+
+***** JB internet of things graphics 
+-- see example here; https://en.wikipedia.org/wiki/Internet_of_things#/media/File:Internet_of_Things.jpg
+
+
 * Haptics
 
+the communication of devices thhrough touch and feel, as a reaction to an action.  This is the science of applying tactule sensations to controllers to interact with computer applications.   
 
-*** What the technology is
-*** How it is integrated in VR
-*** Why they care (it maks them money)
-* Photogrammetry:
-	⁃	
-	⁃	-- create 3d detailed vr spaces an d environemnts
-	⁃	-- create models
-	⁃	-- 3d scan expert (software
-	⁃	-- Hardware - DSLR camera + lighting rings
-	⁃	-- converying real space in VR - realism
-	⁃	-- and integrating real locations into vitual worlds
-	⁃	
-	⁃	
-	⁃	** SS downlaod phtogrammtery app and use 123D capture
-	⁃	
-	⁃	** Blockchain in VR
-	⁃	—  CEEK is a vr blacken, uses smart contracts to have live vr concerts and other events.  works with ether
-	⁃	— mana coin and decentraland
-	⁃	— gaze coin. uses a custom engine to track a views eye movements and how much they are paying attention to certain information.
-	⁃	— ad chain
-	⁃	— make a vr creation, general stability of the platform is assured through blockchain.  
-	⁃	— creative rights and credits
-	⁃	—  vibe hub.- compineing crypto/blockchain/vr, buy and sell celebrity sessions, meet and greet with favorite artist or professional to learn a new skill — allowance of micro transactions with vive currency will usher in a new paradigm of social interactions and transactions .  more immersive than a live chat or phone call.   features, unique social experiences.  ERC20 token.   fair rewards for publishers, no payment cuts.  secure transactions
-	⁃	— star citizen, funding on the blockchain
-	⁃	
-	⁃	
-	⁃	
+
+Add a visceral dimension to virtual expeirences and 3D environments, most frequently by applying vibration, or electrostatic shock.  By using ex-devices, like gloves, vests, shoes and so on, the player receives non-verbal, non-visual feedback from the computer. 
+
+Virtual experiences that train seurgeons and athletes rely on haptic technology to train muscles to maneuver with better presicion.  Our hands determine hardness, shape, tempertaure, texture weight and more.  There is a lot to be undetstood through touch and haptics development is a major contributor to immersion.  
+
+
+* Photogrammetry:	
+
+Is the scanning, computing and rendering of 3D models through 2D photographs and distance differentiators.   By taking several hundred photos of an object from strategic angles we redesign and texture photorealistic objects and environments.
+
+Photogrammetry conveys real spaces as digital simulations,  Think "immersive realism".
+
+Re-creating real environments in virtual reality enables us to simulate travel and fascilitate training.  By maping locations 
+
+**** Related Products:	
+- Bloomaway
+- 
+
+
 
 
 *** What the technology is
